Update dashboard title: remove 'CereVasc' branding
- Change 'CereVasc App Dashboard' to 'App Dashboard'
- Generalize the dashboard title for broader use
- Maintain existing dashboard functionality

--- a/frontend/admin-dashboard/public/clienthome.html
+++ b/frontend/admin-dashboard/public/clienthome.html
@@ -820,7 +820,7 @@
             <img src="logos/logo.png" alt="KachinaHealth Logo" class="kachina-logo">
         </div>
         
-        <h1 class="dashboard-title">CereVasc App Dashboard</h1>
+        <h1 class="dashboard-title">App Dashboard</h1>
 
 
         <div class="company-info">
