--- a/frontend/admin-dashboard/public/clienthome.html
+++ b/frontend/admin-dashboard/public/clienthome.html
@@ -10,6 +10,14 @@
             ? 'http://localhost:5000'
             : (window.location.protocol + '//' + window.location.hostname.replace('client', 'api') ||
                'https://your-backend-service.onrender.com');
+
+        // Logout function - defined early so it's available when HTML elements call it
+        function logout() {
+            localStorage.removeItem('companyInfo');
+            localStorage.removeItem('token');
+            localStorage.removeItem('user');
+            window.location.href = '/';
+        }
     </script>
     <style>
         * {
@@ -1822,7 +1830,6 @@
             initializeTabs();
 
             // Load clinical trials for dropdowns - try even if user profile fetch failed
-            const token = localStorage.getItem('token');
             if (token) {
                 console.log('🎯 About to call loadClinicalTrials()');
                 await loadClinicalTrials();
@@ -4796,13 +4803,6 @@ ${endpointStatus.join('\n')}
             setTimeout(() => {
                 alert.style.display = 'none';
             }, 3000);
-        }
-
-        function logout() {
-            localStorage.removeItem('companyInfo');
-            localStorage.removeItem('token');
-            localStorage.removeItem('user');
-            window.location.href = '/';
         }
 
         async function loadAnalytics() {
